--- a/style/styles.css
+++ b/style/styles.css
@@ -5,3 +5,22 @@ body {
     background-attachment: fixed;
     background-size: 100% 100%;
   }
+
+  .flex-container{
+    display: flex;
+    height: 600px;
+    margin-bottom: 20px;
+}
+.flex-item{
+    width: 800px;
+    padding: 20px;
+    margin: 80px;
+    background-color: rgb(255, 255, 255);
+    color: white;
+    text-align: center;
+    border-radius: 25px;
+    border-style: ridge;
+}
+#container1{
+    justify-content: space-around;
+}
