--- a/style/styles.css
+++ b/style/styles.css
@@ -45,14 +45,16 @@ body {
 }
 .translucent-panel{
     height: 80%;
+    min-height: fit-content;
     background-color: rgba(255, 255, 255, 0.473);
+    justify-content: center;
     text-align: center;
     border-radius: 10px;
 }
-#translucent-box{
+/* #translucent-box{
     
     justify-content: center;
-}
+} */
 .flex-button-area {
     display: flex;
     justify-content: space-around;
