--- a/style/styles.css
+++ b/style/styles.css
@@ -148,4 +148,5 @@ body {
     background-color: black;
     border-radius: 10px;
     padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
